# GIA

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
.codex/skills/gia-senior-dev/: SKILL.md
.codex/skills/gia-senior-dev/agents/: openai.yaml
.codex/skills/gia-senior-dev/references/: plugins.md  runtime.md
.github/workflows/: publish.yml
src/gia/: GIA.py  __init__.py  __main__.py  config.py
src/gia/core/: __init__.py  logger.py  state.py  utils.py
src/gia/plugins/: README.md
