[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "GIA"
version = "0.0.9"
authors = [{ name = "SICORPS" }]
description = "Local-first AI assistant with LLM, RAG, and plugins. Supports local GPTQ models, HuggingFace, OpenAI, and OpenRouter APIs."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "numpy>=2.3.2",
  "torch==2.7.1",
  "transformers==4.55.3",
  "gradio>=5.30.0",
  "chromadb==0.5.20",
  "gptqmodel @ git+https://github.com/ModelCloud/GPTQModel.git@v4.0.0-dev2",
  "llama-index @ git+https://github.com/run-llama/llama_index.git",
  "llama-index-vector-stores-chroma @ git+https://github.com/run-llama/llama_index.git#subdirectory=llama-index-integrations/vector_stores/llama-index-vector-stores-chroma",
  "llama-index-llms-huggingface-api @ git+https://github.com/run-llama/llama_index.git#subdirectory=llama-index-integrations/llms/llama-index-llms-huggingface-api",
  "GPUtil==1.4.0",
  "llama_index.embeddings.huggingface==0.6.0",
  "llama-index-llms-huggingface==0.6.0",
  "scikit-learn==1.7.1",
  "scipy==1.16.1",
  "sentence-transformers==5.1.0",
  "trafilatura==2.0.0",
  "llama-index-llms-openai-like==0.5.0",
  "llama-index-llms-openrouter==0.4.0",
  "packaging>=20.9",
  "requests>=2.31.0",
  "tiktoken>=0.7.0",
  "psutil>=5.9.0",
  "tqdm>=4.66.0",
  "rich>=13.7.0",
  "colorama>=0.4.6",
  "huggingface-hub>=0.25.0",
  "python-dotenv>=1.0.1",
  "llama-index-readers-file",
  "pypdf",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/SIC0RPS/GIA"
Repository = "https://github.com/SIC0RPS/GIA"

[project.scripts]
gia = "gia.__main__:main"

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "flake8>=7.1.1",
  "flake8-pyproject>=1.2.3",
  "flake8-bugbear>=24.12.12",
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py311", "py312", "py313"]
include = "\\.pyi?$"
extend-exclude = """
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""
preview = false

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E501, W503"
extend-select = "B950"
exclude = [
  ".git",
  "__pycache__",
  "*.pyc",
  "*.egg-info",
  ".cache",
  ".eggs",
  "conf",
  "build",
  "dist",
  "migrations",
  "venv",
  ".venv",
  "src/gia/plugins",
]
per-file-ignores = "__init__.py:F401"
max-complexity = 10

[tool.uv.extra-build-dependencies]
gptqmodel = ["torch"]
